--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <section class="mt-5" id="#DataTable"> 
 
-        <div class="container">
+        <div class="container-fluid">
            
               
                 <div class="col-xl-12 mt-5">
