--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <div id="login-row" class="row justify-content-center align-items-center">
             <div id="login-column" class="col-md-6">
                 <div id="login-box" class="col-md-12">
-                    <form id="login-form" class="form" action="#" method="post">
+                    <form id="login-form" class="form" action="#" method="post" autocomplete="off">
                         <h3 class="text-center text-info">Register form</h3>
                         <div class="form-group">
                             <label for="username" class="text-info mt-3">Username:</label><br>
                             <input type="text" name="username" required id="username" class="form-control">
                         </div>
                         <div class="form-group">
-                          <label for="username" class="text-info mt-3">Password:</label><br>
+                          <label for="username"  class="text-info mt-3">Password:</label><br>
                           <div class="d-flex">
-                          <input type="password" name="username" required id="password" class="form-control"> <i id="showPassword" class="fas fa-eye"></i>
+                          <input type="password" autocomplete="off" name="username" required id="password" class="form-control"> <i id="showPassword" class="fas fa-eye"></i>
                         </div>
                       </div>
                         <div class="form-group">
