--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </header>
     <div class="row">
       <div class="col-xl-12 mt-5 mb-5">
-        <h1 class="text-primary text-center">Welcome <span class="text-danger" id="userLoginName"></span></h1>
+        <h1 class="text-primary text-center"><span id="welcome">Welcome</span> <span class="text-danger" id="userLoginName"></span></h1>
       </div>
     </div>
 
